--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,4 @@
 // Your CSS partials
 @import 'components/index';
 @import 'pages/index';
-
-body {
-  background-color: $gray-light;
-}
+@import 'utilities/utilities';
