--- a/app/views/ppsps/footer.html.erb
+++ b/app/views/ppsps/footer.html.erb
@@ -2,5 +2,7 @@
   <div class='mt-3 footer-text'>
     Ce document a été produit avec l'application Obras
   </div>
-  <span class="page"></span> / <span class="topage"></span>
+  <div class='footer-pages'>
+    <span class="page"></span> / <span class="topage"></span>
+  </div>
 </footer>
