--- a/app/views/ppsps/index.html.erb
+++ b/app/views/ppsps/index.html.erb
@@ -5,6 +5,6 @@
         <%= link_to "Modifier les bases de données", database_path, class: 'btn-orange mt-2' %>
       <% end %>
   </div>
-  <h1 class='ppsp-title'><%= "Les PPSP de #{current_user.company.name}" %></h1>
+  <h1 class='ppsp-title'><%= "Les PPSPS de #{current_user.company.name}" %></h1>
   <div id="ppsps-react" data-current=<%= current_user.id %>></div>
 </div>
