Handle Size of dowloaded images

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -11,6 +11,12 @@
   font-size: 14px;
 }
 
+.text-alert-black {
+  color: black;
+  font-style: italic;
+  font-size: 14px;
+}
+
 .notice {
   padding: 0.75rem 1.25rem;
   margin-bottom: 1rem;
