--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -274,13 +274,14 @@
           <p>Votre chantier dispose-t-il d'un plan d'installation ?</p>
           <%= w.input :plan, label: '&nbsp;'.html_safe, input_html: { class: 'checkbox-visual hidden' } %>
           <div id="alert-text-plan" class= <%= @ppsp.worksite.plan ? '' : 'hidden-visibility'%>>
-            <% if @ppsp.worksite.plan_installation.attached? %>
+            <% if @ppsp.worksite.plan_installation.attached? && @ppsp.worksite.plan_installation.persisted? %>
               <div class="render-plan">
                 <%= render 'worksites/plan_installation' %>
               </div>
             <% end %>
-            <div id="input-plan-installation" class=<%= @ppsp.worksite.plan_installation.attached? ? 'hidden' : '' %>>
+            <div id="input-plan-installation" class=<%= @ppsp.worksite.plan_installation.attached? && @ppsp.worksite.plan_installation.persisted? ? 'hidden' : '' %>>
               <p class="text-alert">Veuillez ajouter votre plan d'installation en annexe</p>
+              <p class="text-alert-black">Maximum : 300kB !</p>
               <%= w.input :plan_installation, label: false %>
             </div>
           </div>
@@ -435,8 +436,10 @@
 
 
       <div class="col-md-6 offset-md-3 mt-3">
-        <%= f.input :annexes, label: "Annexes (si besoin)", input_html: { multiple: true } %>
+        <p>Annexes, si besoin</p>
         <p class="text-alert">Vous pouvez maintenir la touche CTRL enfoncée lors de la sélection pour choisir plusieurs fichiers</p>
+        <p class="text-alert-black">Maximum : 500kB (par fichier)</p>
+        <%= f.input :annexes, label: false, input_html: { multiple: true } %>
       </div>
       <% if @ppsp.annexes.attached? %>
         <div class="d-flex flex-wrap justify-content-center w-100" id='container-annexes'>
