--- a/app/views/ppsps/_render_annexes.html.erb
+++ b/app/views/ppsps/_render_annexes.html.erb
@@ -1,6 +1,8 @@
 <% @ppsp.annexes.each_with_index do |annexe, index| %>
-  <div class="container-annexe logo" id=<%= annexe.key %>>
-    <%= cl_image_tag(annexe.key + '.jpg', height: 300, width: 200, class: "mx-4") %>
-    <%= link_to "Supprimer", destroy_annexe_ppsp_path(public_id: annexe.key), class: 'btn-delete', remote: true %>
-  </div>
+  <% unless annexe.id.nil? %>
+    <div class="container-annexe logo" id=<%= annexe.key %>>
+      <%= cl_image_tag(annexe.key + '.jpg', height: 300, width: 200, class: "mx-4") %>
+      <%= link_to "Supprimer", destroy_annexe_ppsp_path(public_id: annexe.key), class: 'btn-delete', remote: true %>
+    </div>
+  <% end %>
 <% end %>
