--- a/app/views/ppsps/_render_logo_client.html.erb
+++ b/app/views/ppsps/_render_logo_client.html.erb
@@ -1,4 +1,4 @@
-<% if params[:action] != 'create' && @ppsp.logo_client.attached? %>
+<% if params[:action] != 'create' && @ppsp.logo_client.attached? && @ppsp.logo_client.persisted? %>
   <div id="oldLogo">
     <div class="logo">
       <%= cl_image_tag @ppsp.logo_client.key, class: 'icon-logo mb-3' %>
