Add notice now for all db

--- a/app/views/kit_security_elements/_list_selected.html.erb
+++ b/app/views/kit_security_elements/_list_selected.html.erb
@@ -4,3 +4,4 @@
     <%= link_to 'x', kit_security_element_path(kit), method: :delete, data: {confirm: 'Êtes-vous sûr ?'}, class: 'ml-1', remote: true %>
   </li>
 <% end %>
+<%= render 'shared/flashes' %>
