--- a/app/views/ppsps/render_pages/footer.html.erb
+++ b/app/views/ppsps/render_pages/footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer-container">
+<footer class="footer-container border-top">
   <div class='mt-3 footer-text'>
     Ce document a été produit avec l'application Obras
   </div>
