--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -63,18 +63,18 @@
   border-top-left-radius: 8px;
   border-bottom-right-radius: 0px;
   border-bottom-left-radius: 0px;
-}
-
-.form-select-machines-title {
-  padding: 10px 20px;
-  font-weight: 500;
-  color: white;
-  text-align: center;
-  width: 100%;
+  .form-select-machines-title {
+    padding: 10px 20px;
+    font-weight: 500;
+    color: white;
+    text-align: center;
+    width: 100%;
+  }
 }
 
 .form-checkboxes-title {
   background-color: white;
+  color: black;
   padding: 5px 10px;
   width: 100%;
   text-align: center;
@@ -82,12 +82,14 @@
 
 .form-checkboxes-subtitle {
   background-color: white;
+  color: black;
   border-bottom: solid 1px gray;
   padding: 5px 10px;
 }
 
 .form-checkboxes {
   height: 200px;
+  color: black;
   overflow-y: auto;
   background: white;
   padding: 20px 40px;
