--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -24,7 +24,7 @@
         <i style='font-size: 80px;'class="fas fa-question-circle mb-4"></i>
       <% end %>
       <i class="fas fa-long-arrow-alt-right mx-4" style='font-size: 40px; display: none;'></i>
-      <img id="newLogo" width="200" class='icon-logo'>
+      <img id="newLogo" width="200" class='icon-logo' style='display: none;'>
     </div>
     <div class='btn-delete' id="removeUpload" style='display: none; text-align: center; width: 100%'>Annuler</div>
     <%= simple_form_for @company do |f| %>
