--- a/app/assets/stylesheets/components/_image.scss
+++ b/app/assets/stylesheets/components/_image.scss
@@ -9,6 +9,11 @@
   }
 }
 
+.image-form-machine img {
+  height: 100px;
+  width: auto;
+}
+
 @media (min-width: 1020px) {
   .img-background-bottom-right {
     position: absolute;
