--- a/app/views/ppsps/render_pages/worksite/_plan_installation.pdf.erb
+++ b/app/views/ppsps/render_pages/worksite/_plan_installation.pdf.erb
@@ -2,4 +2,4 @@
   2.<%= @num_worksite %> Plan d'installation
   <% @num_worksite += 1 %> 
 </h2>
-<%= cl_image_tag(@ppsp.worksite.plan_installation.key, crop: "scale", width: 850) %>
+<%= cl_image_tag(@ppsp.worksite.plan_installation.key + '.jpg', crop: "scale", width: 750) %>
