--- a/app/views/kit_security_elements/error.js.erb
+++ b/app/views/kit_security_elements/error.js.erb
@@ -1,2 +1,5 @@
 document.getElementById('container-form-kit').innerHTML = "<%= j(render 'form') %>"
 document.getElementById('add-security-kit').classList.remove('hidden')
+
+<%# On rappelle la methode hideSecurityKit pour réactiver les fonctionnalités %>
+hideSecurityKit()
