--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -13,7 +13,7 @@
         <% if policy(@user).edit? %>
           <%= link_to edit_profile_path(@user), class: "link" do %>
             <i class="fas fa-pencil-alt"></i>
-            Modifider mes informations
+            Modifier mes informations
           <% end %>
         <% end %>
       </div>
