--- a/app/views/kit_security_elements/create.js.erb
+++ b/app/views/kit_security_elements/create.js.erb
@@ -1,4 +1,12 @@
-document.getElementById('selected-kit-security').innerHTML = "<%= j(render 'list_selected') %>"
+const listSecurityKits = document.getElementById('selected-kit-security')
+listSecurityKits.innerHTML = "<%= j(render 'list_selected') %>"
+
+<%# Scroll en bas de la liste pour voir le nouvel ajout %>
+listSecurityKits.scrollTop = listSecurityKits.scrollHeight;
+
+<%# On chache le form et on le reset %>
 document.getElementById('add-security-kit').classList.add('hidden')
 document.getElementById('add-security-kit').reset()
-document.querySelector('.btn-add-security-kit').innerText = 'Ajouter'
+
+<%# On remet les texte du bouton à "AJOUTER" %>
+document.querySelector('#btn-add-security-kit').innerText = 'Ajouter'
