Add file to risk and render in pdf

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar-expand-sm navbar-light navbar-ppsp">
   <%= link_to ppsps_path, class:"icon-home" do %>
-    <%= image_tag('logo-ppsp.png', width: 80, height: 80) %>
+    <%= image_tag('logo/logo-ppsp.png', width: 80, height: 80) %>
   <% end %>
 
   <% if user_signed_in? %>
