--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="image" property="og:image" content= <%= image_path 'logo-ppsp.png' %>>
+    <meta name="image" property="og:image" content= <%= image_path 'logo/logo-ppsp.png' %>>
     <meta name="description" content="<%= meta_description %>">
     <meta property="og:title" content="<%= meta_title %>" />
     <meta property="og:type" content="website" />
@@ -13,7 +13,7 @@
     <meta property="og:image" content="<%= meta_image %>" />
     <meta property="og:description" content="<%= meta_description %>" />
     <meta property="og:site_name" content="<%= meta_title %>" />
-    <%= favicon_link_tag asset_path('logo-ppsp.png') %>    
+    <%= favicon_link_tag asset_path('logo/logo-ppsp.png') %>    
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
     <%= tinymce_assets %>
