Add cover company + redo cover page

--- a/app/views/companies/_render_logo.html.erb
+++ b/app/views/companies/_render_logo.html.erb
@@ -7,4 +7,4 @@
   <i style='font-size: 80px;'class="fas fa-question-circle mb-4"></i>
 <% end %>
 <i class="fas fa-long-arrow-alt-right mx-4" style='font-size: 40px; display: none;'></i>
-<img id="newLogo" width="200" class='icon-logo'>
+<img id="newLogo" width="200" class='icon-logo' style='display: none'>
