--- a/app/views/ppsps/render_pages/cover.pdf.erb
+++ b/app/views/ppsps/render_pages/cover.pdf.erb
@@ -2,20 +2,26 @@
 <html>
   <head>
     <style type="text/css">
+
+    body {
+      position: relative;
+      height: 1200px;
+    }
+
     .pdf-banner {
-      height: 300px;
+      height: 600px;
       color: white;
       position: relative;
     }
 
     .pdf-banner img {
-      height: 300px;
-      width: 100%;
+      height: 100%;
+      width: auto;
     }
 
     .pdf-banner .banner-title {
       position: absolute;
-      top: 90px;
+      top: 200px;
       width: 100%;
       text-align: center;
       font-weight: 600;
@@ -24,11 +30,11 @@
 
     .pdf-banner .banner-subtitle {
       position: absolute;
-      top: 180px;
+      top: 400px;
       width: 100%;
       text-align: center;
       font-weight: 400;
-      font-size: 18px;
+      font-size: 26px;
     }
 
     .pdf-title {
@@ -38,14 +44,16 @@
       border-bottom: solid 0.5px gray;
       margin-bottom: 8px;
       margin-bottom: 1em;
+      padding: 20px 0px;
     }
 
     .pdf-subtitle {
       text-align: center;
       font-weight: 500;
       font-size: 22px;
-      margin-bottom: 1em;
+      margin-bottom: 0.5em;
       margin-top: 1.5em;
+      padding: 20px 0px;
     }
 
     .pdf-logo {
@@ -64,56 +72,76 @@
       height: 0;
       clear: both;
     }
+
+    .mt-1 {
+      margin-top: 1em;
+    }
+
+    .mt-2 {
+      margin-top: 2em;
+    }
+
+    .mt-4 {
+      margin-top: 4em;
+    }
     
     .flex-div-30 {
       float: left;
       width: 33%;
     }
+
+    .center {
+      text-align: center;
+    }
+
+    .bottom {
+      position: absolute;
+      bottom: 0px;
+      width: 200px;
+      left: 350px;
+    }
+
+    .pdf-logo img {
+      height: 100px;
+      object-fit: fill;
+    }
+
     </style>
   </head>
   <body>
-    <div class="flexbox">
-      <% if @ppsp.user.company.logo.attached? %>
-        <div class="flex-div-30">
-          <%= cl_image_tag @ppsp.user.company.logo.key, class: 'pdf-logo' %>
-        </div>
-      <% end %>
-      <div class="flex-div-30">
-        <div class="pdf-title mb-1">
-          P.P.S.P.S
-        </div>
-        <div class="pdf-subtitle">
-          <%= "Opération : #{@ppsp.project_information.name}" %>
-        </div>
-      </div>
-      <% if @ppsp.logo_client.attached? %>
-        <div class="flex-div-30" style='text-align: right;'>
-          <%= cl_image_tag @ppsp.logo_client.key, class: 'pdf-logo' %>
-        </div>
-      <% end %>
-    </div>
     <div class="pdf-banner my-3">
-      <%= wicked_pdf_image_tag "PPSP.jpg", style: "background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))" %>
+      <% if @ppsp.user.company.cover_image.attached? %>
+        <%= cl_image_tag @ppsp.user.company.cover_image.key, style: "background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))", height: 500 %>
+      <% else %>
+        <%= wicked_pdf_image_tag "PPSP.jpg", style: "background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))" %>
+      <% end %>
       <div class="banner-title">
         Plan Particulier de Sécurité pour la Protection de la Santé
       </div>
       <div class="banner-subtitle">
-        Si tu veux écrire un sous-titre c'est ici
+        <%= @ppsp.project_information.name %>
       </div>
     </div>
-    <div class="pdf-title">
-      <%= @ppsp.project_information.name %>
-    </div>
-    <div class="pdf-subtitle">
+    <div class="pdf-subtitle mt-2">
       <%= @ppsp.worksite.nature %>
     </div>
-    <div class="date">
+    <div class='pdf-logo center'>
+      <%= cl_image_tag(@ppsp.user.company.logo.key) %>
+    </div>
+    <div class='pdf-subtitle'>
+      <%= @ppsp.user.company.name %>
+    </div>
+    <div class='center'>
+      <p><%= @ppsp.user.company.address %></p>
+      <p><%= @ppsp.user.company.phone %></p>
+    </div>
+    <div class="bottom center mt-4">
       <%= "Créé le #{@ppsp.created_at.strftime("%d/%m/%Y")}" %>
     </div>
-    <div class="date">
-      <% if @ppsp.updated_at > @ppsp.created_at %>
-        <%= "Créé le #{@ppsp.updated_at.strftime("%d/%m/%Y")}" %>
-      <% end %>
-    </div>
+    <% if @ppsp.updated_at > @ppsp.created_at %>
+      <div class="center mt-1">
+        <%= "Modifier le #{@ppsp.updated_at.strftime("%d/%m/%Y")}" %>
+      </div>
+    <% end %>
   </body>
 </html>
