--- a/app/views/ppsps/render_pages/worksite/_date_effectifs.pdf.erb
+++ b/app/views/ppsps/render_pages/worksite/_date_effectifs.pdf.erb
@@ -3,8 +3,11 @@
      2.<%= @num_worksite %> Dates du chantier
       <% @num_worksite += 1%>
   </h2>
-  <div class="flex-div-40">Date de début : </div><div class="flex-div-60"><%= @ppsp.worksite.start_date %></div>
-  <div class="flex-div-40">Date de fin : </div><div class="flex-div-60"><%= @ppsp.worksite.end_date %></div>
+  <div class="flexbox">
+    <div class="flex-div-40">Date de début : </div><div class="flex-div-60"><%= @ppsp.worksite.start_date %></div>
+    <div class="flex-div-40">Date de fin : </div><div class="flex-div-60"><%= @ppsp.worksite.end_date %></div>
+    <div class="flex-div-40">Durée : </div><div class="flex-div-60"><%= "#{(@ppsp.worksite.end_date - @ppsp.worksite.start_date).to_i} jours" %></div>
+  </div>
   <% if @ppsp.worksite.timetable_summer || @ppsp.worksite.timetable_winter %>
     <h2 class="pdf-subtitle">
       2.<%= @num_worksite %> Les horaires du chantier
@@ -12,17 +15,21 @@
     </h2>
     <% if @ppsp.worksite.timetable_summer %>
       <div class='pdf-subsubtitle'>Horaires d'été</div>
-      <% ['Lundi', 'Mardi', 'Mercredi', 'Jeudi'].each do |day| %>
-        <div class="flex-div-40"><%= day %> : </div><div class="flex-div-60"><%= @ppsp.worksite.timetable_summer_start %> - <%= @ppsp.worksite.timetable_summer_end %></div>
-      <% end %>
-       <div class="flex-div-40">Vendredi : </div><div class="flex-div-60"><%= @ppsp.worksite.timetable_summer_start_friday %> - <%= @ppsp.worksite.timetable_summer_end_friday %></div>
+      <div class="flexbox">
+        <% ['Lundi', 'Mardi', 'Mercredi', 'Jeudi'].each do |day| %>
+          <div class="flex-div-40"><%= day %> : </div><div class="flex-div-60"><%= @ppsp.worksite.timetable_summer_start %> - <%= @ppsp.worksite.timetable_summer_end %></div>
+        <% end %>
+        <div class="flex-div-40">Vendredi : </div><div class="flex-div-60"><%= @ppsp.worksite.timetable_summer_start_friday %> - <%= @ppsp.worksite.timetable_summer_end_friday %></div>
+      </div>
     <% end %>
     <% if @ppsp.worksite.timetable_winter %>
       <div class='pdf-subsubtitle'>Horaires d'hiver</div>
-      <% ['Lundi', 'Mardi', 'Mercredi', 'Jeudi'].each do |day| %>
-        <div class="flex-div-40"><%= day %> : </div><div class="flex-div-60"><%= @ppsp.worksite.timetable_winter_start %> - <%= @ppsp.worksite.timetable_winter_end %></div>
-      <% end %>
-      <div class="flex-div-40">Vendredi: </div><div class="flex-div-60"><%= @ppsp.worksite.timetable_winter_start_friday %> - <%= @ppsp.worksite.timetable_winter_end_friday %></div>
+      <div class="flexbox">
+        <% ['Lundi', 'Mardi', 'Mercredi', 'Jeudi'].each do |day| %>
+          <div class="flex-div-40"><%= day %> : </div><div class="flex-div-60"><%= @ppsp.worksite.timetable_winter_start %> - <%= @ppsp.worksite.timetable_winter_end %></div>
+        <% end %>
+        <div class="flex-div-40">Vendredi: </div><div class="flex-div-60"><%= @ppsp.worksite.timetable_winter_start_friday %> - <%= @ppsp.worksite.timetable_winter_end_friday %></div>
+      </div>
     <% end %>
   <% end %>
 
@@ -35,4 +42,22 @@
     <div class="flex-div-60">Nombre de conducteurs d'engins : </div><div class="flex-div-40"><%= @ppsp.worksite.num_conductor %></div>
     <div class="flex-div-60">Nombre de compagnons : </div><div class="flex-div-40"><%= @ppsp.worksite.num_worker %></div>
   </div>
+</div>
+
+<div class="container-80">
+  <% if @ppsp.worksite.electrical_site %>
+    <div class="pdf-subtitle"> 
+      2.<%= @num_worksite %> Installation electrique
+      <% @num_worksite += 1 %>
+    </div>
+    <p>Le chantier implique la mise en place d'installations électriques</p>
+  <% end %>
+
+  <% if @ppsp.worksite.water_site %>
+    <div class="pdf-subtitle">
+      2.<%= @num_worksite %> Installation d'eau
+        <% @num_worksite += 1 %> 
+    </div>
+    <p>Le chantier implique la mise en place d'installations d'eau</p>
+  <% end %>
 </div>
